css/genericindex.css
.jetbrainsmono {
    font-family: "JetBrains Mono", monospace;
    font-optical-sizing: auto;
    font-weight: 50;
    font-style: normal;
  }
  
  * {
      padding: 0;
      margin: 0;
      box-sizing: border-box;
  }
  
  ::-webkit-scrollbar {
      display: none;
  }
  
  header h1{
      width: auto;
      height: 100px;   
  }
  
  body {
      margin: 0;
      font-family: Arial, sans-serif;
      background-color: #000000;
      background-image: url(./../other/photos/infor.png);
      justify-content: center;
      align-items: center;
  }
  
  .cktile{
      border-bottom: rgb(255, 255, 255) 10px solid;
  }
  
  header {
      background-color: black;
      padding: 0;
      width: 100%;
  }
  
  
  .computerNav {
      flex-direction: row-reverse;
      background-color: #000000;
      height: 80px;
      display: flex;   
  }
  
  /*與computernav齊行，放logo與ckinfor*/
  .title_and_nav_container{
      background-color: #00000055;
      display: flex;
      padding-right: auto;
  } 
  
  .header h1{
     height: 80px;
  }
  
  .title1 {
      height: 10px;
      width: 20px;
      display: block;
      text-indent: 101%;
      overflow: hidden;
      white-space: nowrap;
  }
  
  .index_logo{
      margin-right: 30px;
      margin-left: 30px;
      margin-top: 8.5 px;
      margin-bottom: 20 px;
      height: 83px;
      width: 344px;
      display: flex;  
  }   
  

  
  .sorry{
      color: white;
      text-align: center;
  }
  
  .clubsign img{
      margin: 50px;
      height: 92px;
      width: 400px;
  }
  
  .computerNav a{
      font-family: "Noto Sans TC", sans-serif;
      font-optical-sizing: auto;
      font-weight: 500;
      font-style: normal;
      transition: 0.15s;
      color: white;
      border: none;
      text-align: center;
      border-radius: 17px;
      font-size: 20px;
      padding: auto 10px 10px auto;
      height: 25px;
      width: 25px;
      padding-right: 10px;
  }
  
  .computerNav a:hover{
      font-family: "Noto Sans TC", sans-serif;
      font-optical-sizing: auto;
      font-weight: 500;
      font-style: normal;
      transition: 0.15s;
      background-color: white;
      color: black;
      border: none;
      text-align: center;
      border-radius: 17px;
      font-size: 20px;
      padding: 20px 40px; 
      height: 25px;
      width: 25px;    
  }

  .computerNav div{
    font-family: "Noto Sans TC", sans-serif;
    font-optical-sizing: auto;
    font-weight: 500;
    font-style: normal;
    background-color: white;
    color: black;
    border: none;
    text-align: center;
    border-radius: 17px;
    font-size: 20px;
    padding: 20px 40px; 
    height: 25px;
    width: 25px; 
    display: inline;
  }
  
  nav ul {
      display: flex;
      list-style: none;
      margin-top: 35.5px;
      margin-bottom: 35.5px;
      text-align: right;
      padding-left: auto;
      position: absolute;
      right: 30px;
  }
  
  nav ul li {
      display: inline;
      margin-right: 15px;
      margin-left: 15px;
  }
  
  nav ul li a {
      color: white;
      text-decoration: none;
      font-size: 1.2rem;
  }
  
  nav ul li a:hover {
      color: black;
  }
  
  .topnav {
      overflow: hidden;
      background-color: #333;
      position: relative;
      display: none;
  }
    
  .topnav #myLinks {
      display: none;
  }
    
  .topnav a {
    color: white;
    font-family: "Noto Sans TC", sans-serif;
    font-optical-sizing: auto;
    font-weight: 450;
    font-style: normal;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    display: block;
}
  

    
  .active {
      background-color: #000000;
      color: white;
  }
/* mobile */  
.title1Mobile {
    height: 10px;
    width: 20px;
    display: block;
    text-indent: 110%;
    overflow: hidden;
    white-space: nowrap;
}

.title2Mobile {
    height: 10px;
    width: 20px;
    display: block;
    text-indent: 101%;
    overflow: hidden;
    white-space: nowrap;
}

.mobile_logo {
    margin-right: 30px;
    margin-left: 17px;
    margin-top: 18px;
    margin-bottom: 15px;
    height: 47px;
    width: 185px;
    display: flex;  
}

.title_and_nav_container a{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.topnav a.icon {
    background: black;
    display: block;
    position: absolute;
    right: 30px;
    margin-top: 30px;
    padding: 0px;
}

.topnav #myLinks a:hover {
      background-color: #ddd;
      color: black;
}

@media (max-width: 2160px) and (min-width: 1083px) {
    .logo-container img {
        height: 100%;
        width: auto;
    }
    .topnav {
        display: none;
    }
    .mobileFooter {
        display: none;
    }
} 

@media (max-width: 1082px) {
    .logo-container img {
        width: 100%;
        height: auto;
    }
    .homepage_title {
        display: none;
    }
    .computerNav {
        display: none;
    }
    .topnav {
        display: inline;
    }
    header {
        padding: 0;
    }
    .footer_container {
        display: none;
    }
    .mobileFooter {
        display: block;
    }
}

